noinst_LIBRARIES = libvprmodel.a
libvprmodel_a_SOURCES = control.cpp line.cpp map.cpp parser.cpp presentation.cpp robot.cpp localization/ekf.cpp mapping/grid.cpp ai/ai.cpp ai/simple-ai.cpp ai/mcts-ai.cpp
noinst_HEADERS = control.h line.h map.h parser.h presentation.h robot.h scene.h localization/ekf.h mapping/grid.h ai/ai.h ai/simple-ai.h ai/mcts-ai.h
